--- a/src/components/project/ProjectCarousel.astro
+++ b/src/components/project/ProjectCarousel.astro
@@ -6,7 +6,7 @@ import ProjectCard from "./ProjectCard.astro"
     <div class="text-black">
         <div class="flex flex-col gap-4 px-4 py-6 h-full w-full items-center">
             <!-- Card 1 -->
-            <ProjectCard emoji="🌐"
+            <ProjectCard emoji="💌"
                          name="Otome Tracker"
                          link="#"
                          skills="Typescript, Tailwind CSS, React, Kotlin, Docker, Postgres, Flyway"
