--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,7 +33,7 @@
 }
 
 body {
-    @apply bg-black text-white;
+    @apply bg-black text-[#FFFFFFdd];
     font-family: 'Libre Franklin Variable', sans-serif;
 }
 
