Update the project description and add to-do for new project page'

--- a/src/components/project/ProjectCarousel.astro
+++ b/src/components/project/ProjectCarousel.astro
@@ -11,7 +11,7 @@ import ProjectCard from "./ProjectCard.astro"
                          link="#"
                          skills="Typescript, Tailwind CSS, React, Kotlin, Docker, Postgres, Flyway"
                          state="In Progress"
-                         description="To be updated.">
+                         description="To be updated. /n - 1. A web application to track and manage otome games, built with React, Typescript, and Tailwind CSS. /n - 2. A mobile application to track and manage otome games, built with Kotlin. /n - 3. A backend service to handle data storage and retrieval, built with Docker, Postgres, and Flyway.">
             </ProjectCard>
                 <ProjectCard emoji="🌐"
                              name="Portfolio Site"
@@ -43,14 +43,6 @@ import ProjectCard from "./ProjectCard.astro"
                              skills="Javascript, React, Tailwind CSS, Vercel"
                              state="Completed"
                              description="This is my first ever Portfolio Website, made with React and Tailwind CSS, and used JSON data to display my skills and projects.">
-                </ProjectCard>
-            <!-- Card 5 -->
-                <ProjectCard emoji="📚"
-                             name="Book Review API"
-                             link="https://github.com/vzunguyen/book-review"
-                             skills="Javascript, React, Tailwind CSS, Vercel"
-                             state="In Progress"
-                             description="This project was developed in preparation for job hunting and learning Java and Springboot, technologies that are widely used in the industry.">
                 </ProjectCard>
         </div>
     </div>
