--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,5 +3,6 @@ import Layout from "../layouts/Layout.astro";
 import ProjectCarousel from "../components/project/ProjectCarousel.astro";
 ---
 <Layout>
+    <!--TODO: Add a page for each project for project details and description.-->
     <ProjectCarousel />
 </Layout>
