--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -4,7 +4,7 @@
 <div class="px-5 relative h-full w-full md:overflow-y-auto">
     <ol class="relative border-s border-gray-200">
         <li class="pt-3 pb-10 ms-4">
-            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
+            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"></div>
             <time class="mb-1 text-sm font-normal leading-none">Feb 2025 - Present</time>
             <h3 class="text-lg font-semibold ">Games Developer Internship</h3>
             <h3 class="text-[17px] font-normal italic">Education Network Group</h3>
@@ -15,7 +15,7 @@
             </p>
         </li>
         <li class="pb-10 ms-4">
-            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
+            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"></div>
             <time class="mb-1 text-sm font-normal leading-none">June 2023 - Present</time>
             <h3 class="text-lg font-semibold ">Sales Team Member and Online Personal Shopper</h3>
             <h3 class="text-[17px] font-normal italic">Woolworths Supermarket</h3>
@@ -25,7 +25,7 @@
             </p>
         </li>
         <li class="pb-10 ms-4">
-            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
+            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"></div>
             <time class="mb-1 text-sm font-normal leading-none">Feb 2023 - Present</time>
             <h3 class="text-lg font-semibold ">Studying Bachelor of Computer Science</h3>
             <h3 class="text-[17px] font-normal italic">Swinburne University of Technology</h3>
@@ -36,7 +36,7 @@
             </p>
         </li>
         <li class="pb-10 ms-4">
-            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
+            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"></div>
             <time class="mb-1 text-sm font-normal leading-none">January 2022 - January 2023</time>
             <h3 class="text-lg font-semibold ">Sale Assistant</h3>
             <h3 class="text-[17px] font-normal italic">Lann Jewelry</h3>
@@ -46,7 +46,7 @@
             </p>
         </li>
         <li class="pb-10 ms-4">
-            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
+            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"></div>
             <time class="mb-1 text-sm font-normal leading-none">January 2022 - January 2023</time>
             <h3 class="text-lg font-semibold ">Head of Marketing Department</h3>
             <h3 class="text-[17px] font-normal italic">KIBV- Keep It Beautiful Vietnam</h3>
