Update global styling and fix related styling: hamburger items text colour

--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -11,27 +11,27 @@
 <div id="menuPanel" class="fixed top-0 left-0 w-full h-full bg-white z-40 transform -translate-y-full transition-transform duration-500">
     <div class="flex flex-col items-center justify-center h-full space-y-8 text-xl text-black">
         <a href="/">
-            <span class="relative text-black">
+            <span id="hamburger-item" class="relative">
               Home
             </span>
         </a>
         <a href="/experience">
-            <span class="relative text-black">
+            <span id="hamburger-item" class="relative">
               Experience
             </span>
         </a>
         <a href="/projects">
-            <span class="relative text-black">
+            <span id="hamburger-item" class="relative">
               Projects
             </span>
         </a>
         <a href="/skills">
-            <span class="relative text-black">
+            <span id="hamburger-item" class="relative">
               Skills
             </span>
         </a>
         <a href="/contact">
-            <span class="relative text-black">
+            <span id="hamburger-item" class="relative">
               Contacts
             </span>
         </a>
