--- a/src/components/project/ProjectCard.astro
+++ b/src/components/project/ProjectCard.astro
@@ -4,7 +4,7 @@
  ---
  <div class="border border-[#5E5E64] max-w-full backdrop-blur-sm md:w-2/3 rounded-xl p-6 snap-start transition-all duration-300 ease-in-out  hover:scale-103">
      <a href={link}>
-         <h1 class="text-3xl text-[#FFFFFFcc] font-bold transition-colors duration-300 ease-in-out hover:text-pink-500">
+         <h1 class="text-[#FFFFFFcc] transition-colors duration-300 ease-in-out hover:text-pink-500">
              <span class="text-2xl">{emoji}</span> {name}
          </h1>
      </a>
