--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -8,6 +8,7 @@
     after:rounded-full after:-translate-y-2 after:transition-all after:duration-300">
     </div>
 </div>
+<!--TODO: Disable scroll when menu is open -->
 <div id="menuPanel" class="fixed top-0 left-0 w-full h-full bg-white z-40 transform -translate-y-full transition-transform duration-500">
     <div class="flex flex-col items-center justify-center h-full space-y-8 text-xl text-black">
         <a href="/">
