--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,16 +1,12 @@
 @import "tailwindcss";
 @plugin '@tailwindcss/typography';
 
-* {
-    @apply text-[#FFFFFFcc];
-}
-
 #hamburger-item {
     @apply text-black;
 }
 
-h1 {
-    @apply font-extrabold text-2xl md:text-3xl;
+.markdown-content h1 {
+    @apply font-bold text-2xl;
 }
 
 @font-face {
