Add properties for md files blogs and update project carousel for dynamic routing

--- a/src/components/project/ProjectCard.astro
+++ b/src/components/project/ProjectCard.astro
@@ -8,6 +8,7 @@
              <span class="text-2xl">{emoji}</span> {name}
          </h1>
      </a>
+     <!-- TODO: Style skills so that they have a space and "," between each skill-->
      <p class="text-sm text-[#FFFFFFcc]">
          {skills}
      </p>
