Add project blog to test dynamic routing

--- a/src/components/project/ProjectCarousel.astro
+++ b/src/components/project/ProjectCarousel.astro
@@ -17,44 +17,44 @@ const blogs = await Astro.glob('../../pages/projectblogs/*.md')
                 </ProjectCard>
             ))}
             <!-- Card 1 -->
-            <ProjectCard emoji="💌"
-                         name="Otome Tracker"
-                         link="/projectblogs/otometracker/"
-                         skills="Typescript, Tailwind CSS, React, Kotlin, Docker, Postgres, Flyway"
-                         state="In Progress"
-                         description="To be continued">
-            </ProjectCard>
-                <ProjectCard emoji="🌐"
-                             name="Portfolio Site"
-                             link="https://github.com/vzunguyen/portfolio-site"
-                             skills="Javascript, React, Astro, Tailwind CSS, Vercel"
-                             state="In Progress"
-                             description="In order to put myself out there in the industry, I have created this portfolio website to showcase my skills and projects. This website is made with Astro, React and TailwindCSS.">
-                </ProjectCard>
-            <!-- Card 2 -->
-                <ProjectCard emoji="⛅"
-                             name= "Weather App Project"
-                             link="https://github.com/vzunguyen/weather-project"
-                             skills="Python, React, Javascript, Jira"
-                             state="Completed"
-                             description="A tool for forecasting weather conditions and estimating building electricity usage, combining real-time weather APIs with NYC historical data. Python, FastAPI, JavaScript, React. This project was a university project between 2 team members.">
-                </ProjectCard>
-            <!-- Card 3 -->
-                <ProjectCard emoji="🤖"
-                             name="LLMs Project"
-                             link="https://github.com/vzunguyen/llms-project"
-                             skills="Python, PyTorch, LitGPT"
-                             state="Suspended"
-                             description="A prototype large language model built from scratch using PyTorch and LitGPT, covering tokenization, model design, and training fundamentals. Python, PyTorch, LitGPT.">
-                </ProjectCard>
-            <!-- Card 4 -->
-                <ProjectCard emoji="🌟"
-                             name="My First Portfolio Website"
-                             link="https://github.com/vzunguyen/portfolio-website"
-                             skills="Javascript, React, Tailwind CSS, Vercel"
-                             state="Completed"
-                             description="This is my first ever Portfolio Website, made with React and Tailwind CSS, and used JSON data to display my skills and projects.">
-                </ProjectCard>
+            <!--<ProjectCard emoji="💌"-->
+            <!--             name="Otome Tracker"-->
+            <!--             link="/projectblogs/otometracker/"-->
+            <!--             skills="Typescript, Tailwind CSS, React, Kotlin, Docker, Postgres, Flyway"-->
+            <!--             state="In Progress"-->
+            <!--             description="To be continued">-->
+            <!--</ProjectCard>-->
+            <!--    <ProjectCard emoji="🌐"-->
+            <!--                 name="Portfolio Site"-->
+            <!--                 link="https://github.com/vzunguyen/portfolio-site"-->
+            <!--                 skills="Javascript, React, Astro, Tailwind CSS, Vercel"-->
+            <!--                 state="In Progress"-->
+            <!--                 description="In order to put myself out there in the industry, I have created this portfolio website to showcase my skills and projects. This website is made with Astro, React and TailwindCSS.">-->
+            <!--    </ProjectCard>-->
+            <!--&lt;!&ndash; Card 2 &ndash;&gt;-->
+            <!--    <ProjectCard emoji="⛅"-->
+            <!--                 name= "Weather App Project"-->
+            <!--                 link="https://github.com/vzunguyen/weather-project"-->
+            <!--                 skills="Python, React, Javascript, Jira"-->
+            <!--                 state="Completed"-->
+            <!--                 description="A tool for forecasting weather conditions and estimating building electricity usage, combining real-time weather APIs with NYC historical data. Python, FastAPI, JavaScript, React. This project was a university project between 2 team members.">-->
+            <!--    </ProjectCard>-->
+            <!--&lt;!&ndash; Card 3 &ndash;&gt;-->
+            <!--    <ProjectCard emoji="🤖"-->
+            <!--                 name="LLMs Project"-->
+            <!--                 link="https://github.com/vzunguyen/llms-project"-->
+            <!--                 skills="Python, PyTorch, LitGPT"-->
+            <!--                 state="Suspended"-->
+            <!--                 description="A prototype large language model built from scratch using PyTorch and LitGPT, covering tokenization, model design, and training fundamentals. Python, PyTorch, LitGPT.">-->
+            <!--    </ProjectCard>-->
+            <!--&lt;!&ndash; Card 4 &ndash;&gt;-->
+            <!--    <ProjectCard emoji="🌟"-->
+            <!--                 name="My First Portfolio Website"-->
+            <!--                 link="https://github.com/vzunguyen/portfolio-website"-->
+            <!--                 skills="Javascript, React, Tailwind CSS, Vercel"-->
+            <!--                 state="Completed"-->
+            <!--                 description="This is my first ever Portfolio Website, made with React and Tailwind CSS, and used JSON data to display my skills and projects.">-->
+            <!--    </ProjectCard>-->
         </div>
     </div>
 </div>
