Styling git repo link

--- a/src/components/project/ProjectCard.astro
+++ b/src/components/project/ProjectCard.astro
@@ -14,7 +14,7 @@
      <div class="py-2">
         <StateTag stateText={state}></StateTag>
      </div>
-     <a href={github} class="text-sm text-[#FFFFFFcc]">
+     <a href={github} class="text-[0.85rem] text-[#FFFFFFcc] underline hover:text-pink-400 transition-colors duration-300 ease-in-out mb-2 inline-block">
          Github Repository
      </a>
      <p class="text-base text-[#FFFFFFcc]">
