--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,14 +1,22 @@
 @import "tailwindcss";
 @plugin '@tailwindcss/typography';
 
+body {
+    @apply bg-black text-[#FFFFFFdd];
+    font-family: 'Libre Franklin Variable', sans-serif;
+}
+
 #hamburger-item {
     @apply text-black;
 }
 
 .markdown-content h1 {
-    @apply font-bold text-2xl;
+    @apply font-bold text-2xl mb-4;
 }
 
+.markdown-content h1, .markdown-content h2, .markdown-content h3 {
+    @apply mt-6 mb-2;
+}
 @font-face {
     font-family: 'Roboto Mono Variable';
     font-style: normal;
@@ -36,11 +44,6 @@
     font-weight: 300;
     src: url(@fontsource/bebas-neue/files/bebas-neue-latin-400-normal.woff2) format('woff2'), url(@fontsource/bebas-neue/files/bebas-neue-latin-400-normal.woff) format('woff');
     unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
-}
-
-body {
-    @apply bg-black text-[#FFFFFFdd];
-    font-family: 'Libre Franklin Variable', sans-serif;
 }
 
 nav, .nav {
