--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -26,6 +26,16 @@
         </li>
         <li class="pb-10 ms-4">
             <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"></div>
+            <time class="mb-1 text-sm font-normal leading-none">June 2025</time>
+            <h3 class="text-lg font-semibold ">Programming Tutor</h3>
+            <h3 class="text-[17px] font-normal italic">Girl's Programming Network</h3>
+            <p class="mt-1 mb-4 text-sm font-light">
+                Volunteered as a programming tutor, mentoring young girls (Year 12 and below) in foundational coding skills. <br>
+                Guided students through the career decision-making process, offering advice on study and career pathways. <br>
+            </p>
+        </li>
+        <li class="pb-10 ms-4">
+            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"></div>
             <time class="mb-1 text-sm font-normal leading-none">Feb 2023 - Present</time>
             <h3 class="text-lg font-semibold ">Studying Bachelor of Computer Science</h3>
             <h3 class="text-[17px] font-normal italic">Swinburne University of Technology</h3>
