--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,13 +10,21 @@ body {
     @apply text-black;
 }
 
+.markdown-content h1, .markdown-content h2, .markdown-content h3 {
+    @apply mt-6 mb-2;
+}
 .markdown-content h1 {
     @apply font-bold text-2xl mb-4;
 }
 
-.markdown-content h1, .markdown-content h2, .markdown-content h3 {
-    @apply mt-6 mb-2;
+.markdown-content h2 {
+    @apply font-semibold text-xl;
 }
+
+.markdown-content h3 {
+    @apply font-medium text-lg;
+}
+
 @font-face {
     font-family: 'Roboto Mono Variable';
     font-style: normal;
