--- a/src/layouts/ProjectBlogLayout.astro
+++ b/src/layouts/ProjectBlogLayout.astro
@@ -5,7 +5,7 @@ const { frontmatter } = Astro.props;
 
 ---
 <MainLayout>
-    <h1 class="font-extrabold text-2xl md:text-3xl">{frontmatter.title}</h1>
+    <h1 class="text-4xl md:text-5xl">{frontmatter.title}</h1>
     <!--TODO: Create table of contents component-->
     <div class="markdown-content">
         <slot/>
