--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,15 +14,15 @@ body {
     @apply mt-6 mb-2;
 }
 .markdown-content h1 {
-    @apply font-bold text-2xl mb-4;
+    @apply mb-4 text-2xl md:text-3xl;
 }
 
 .markdown-content h2 {
-    @apply font-semibold text-xl;
+    @apply mb-3 text-xl md:text-2xl;
 }
 
 .markdown-content h3 {
-    @apply font-medium text-lg;
+    @apply mb-2 text-lg md:text-xl;
 }
 
 .markdown-content img {
