--- a/src/components/project/ProjectCarousel.astro
+++ b/src/components/project/ProjectCarousel.astro
@@ -6,7 +6,7 @@ const blogs = await Astro.glob('../../pages/projectblogs/*.md')
 <!-- ProjectCarousel wrapper -->
     <div class="text-black">
         <div class="flex flex-col gap-4 px-4 py-6 h-full w-full items-center">
-            <!--Dynamic Project Cards from MD Files:-->
+            <!--Dynamic Projecst Cards from MD Files:-->
             {blogs.map((blog) => (
                 <ProjectCard emoji={blog.frontmatter.emoji}
                              name={blog.frontmatter.title}
