Impletmented Table of Contents

--- a/src/components/TableContents.astro
+++ b/src/components/TableContents.astro
@@ -1,3 +1,14 @@
 ---
 ---
-<!--TODO: Implement TableContents component, When click, move to the section-->
+<!--TODO: Dynamic ToC for each blog - potential different headings -->
+<div>
+    <h1 class="mb-4 text-2xl md:text-3xl">Table of Contents</h1>
+    <ul>
+        <li>
+            <a href="#introduction" class="text-blue-500 underline">Introduction</a>
+        </li>
+        <li>
+            <a href="#technologies-used" class="text-blue-500 underline">Technologies Used</a>
+        </li>
+    </ul>
+</div>
