--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -65,5 +65,9 @@
                 Honed leadership skills by leading to develop marketing strategies and campaigns
             </p>
         </li>
+        <!-- TODO: Brainstorm a way to end the timeline with a nice touch-->
+        <li class="mb-5 pb-2 ms-4">
+            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"></div>
+        </li>
     </ol>
 </div>
