Fix welcome summary, change to new resume and transcipt, getting prepared to design change

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,6 +1,7 @@
 ---
 import Hamburger from "./Hamburger.astro"
 ---
+<!--TODO: Change this into side bar - Not redirecting to different page. Same page different section-->
 <nav class="invisible md:visible">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-evenly mx-auto p-10">
         <a href="/">
