--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -1,6 +1,7 @@
 ---
 
 ---
+<h1 class="font-extrabold text-2xl md:text-3xl p-5">Working Experience</h1>
 <div class="px-5 relative h-full w-full md:overflow-y-auto">
     <ol class="relative border-s border-gray-200">
         <li class="pt-3 pb-10 ms-4">
