--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -12,9 +12,8 @@ import React from 'react';
 				<h1 class="font-extrabold text-2xl md:text-3xl">Hi, I'm Du Van Nguyen!</h1>
 			</div>
 			<span class="sm:text-sm md:text-xl pt-3 px-5 md:mr-30 md:ml-30 lg:mr-60 lg:ml-60">
-					I am currently a third year student at Swinburne University of
-                    Technology, studying <mark class="highlightword text-[1rem] px-1 py-1/5 rounded">Computer Science</mark> with a major in <mark class="highlightword text-[1rem] px-1 py-1/5 rounded">Software
-                    Development</mark>. Additionally, I'm also a <mark class="highlightword text-[1rem] px-1 py-1/5 rounded"> game developer intern</mark> at Education Network
+					I am a recent <mark class="highlightword text-[1rem] px-1 py-1/5 rounded">Computer Science</mark> (<mark class="highlightword text-[1rem] px-1 py-1/5 rounded">Software
+                    Development</mark> major) graduate. Additionally, I am also a former <mark class="highlightword text-[1rem] px-1 py-1/5 rounded"> game developer intern</mark> at Education Network
                     Group. Given my <mark class="highlightword text-[1rem] px-1 py-1/5 rounded">passion for problem-solving</mark>, I have made it my goal to become a software developer. Despite
                     being new to the industry, I am always <mark class="highlightword text-[1rem] px-1 py-1/5 rounded">eager to learn more and improve
                     my skills</mark> as I believe it is important to quickly adapt in this
