--- a/src/components/project/ProjectCarousel.astro
+++ b/src/components/project/ProjectCarousel.astro
@@ -2,9 +2,11 @@
 import ProjectCard from "./ProjectCard.astro"
 const blogs = await Astro.glob('../../pages/projectblogs/*.md')
 ---
+<h1 class="font-extrabold text-2xl md:text-3xl p-5">Projects</h1>
 <div class="relative h-full w-full md:overflow-y-auto">
 <!-- ProjectCarousel wrapper -->
     <div class="text-black">
+        <!--TODO: Fix this according to new design &#45;&#45; All important details in one page index-->
         <div class="flex flex-col gap-4 px-4 py-6 h-full w-full items-center">
             <!--Dynamic Projecst Cards from MD Files:-->
             {blogs.map((blog) => (
