--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import Timeline from "../components/Timeline.astro";
+import ProjectCarousel from "../components/project/ProjectCarousel.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -9,4 +11,6 @@ const pageTitle = "Home Page";
 
 <Layout>
 	<Welcome />
+	<!--<Timeline />-->
+	<!--<ProjectCarousel />-->
 </Layout>
