--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ import Navigation from "../components/Navigation.astro";
 		<title>zuvn</title>
 	</head>
 	<body>
-		<Navigation />
+		<!--<Navigation />-->
 		<svg class="fixed inset-0 w-full h-full -z-1" version="1.1" xmlns="http://www.w3.org/2000/svg"
 			 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 1600 900" preserveAspectRatio="xMidYMax slice">
 			<defs>
