--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 import Timeline from "../components/Timeline.astro";
 import ProjectCarousel from "../components/project/ProjectCarousel.astro";
+import SideNav from "../components/SideNav.astro";
+import Projects from "./projects.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -10,7 +12,11 @@ const pageTitle = "Home Page";
 ---
 
 <Layout>
-	<Welcome />
-	<!--<Timeline />-->
+	<SideNav />
+	<div class="p-4 sm:ml-64">
+		<Welcome />
+		<Timeline />
+		<Projects/>
+	</div>
 	<!--<ProjectCarousel />-->
 </Layout>
