--- a/src/components/SideNav.astro
+++ b/src/components/SideNav.astro
@@ -1,30 +1,43 @@
 ---
 
 ---
-<nav class="fixed top-0 left-0 z-40 w-64 h-full items-center justify-center space-y-8 w-1/4 text-xl">
-    <a href="#introduction">
-        <span class="relative hover:text-pink-400 cursor-pointer transition-all ease-in-out before:transition-[width] before:ease-in-out before:duration-700 before:absolute before:bg-pink-400 before:origin-center before:h-[1px] before:w-0 hover:before:w-[50%] before:bottom-0 before:left-[50%] after:transition-[width] after:ease-in-out after:duration-700 after:absolute after:bg-pink-400 after:origin-center after:h-[1px] after:w-0 hover:after:w-[50%] after:bottom-0 after:right-[50%]">
-          Introduction
-        </span>
-    </a>
-    <a href="#working-experience">
-        <span class="relative ">
-          Working Experience
-        </span>
-    </a>
-    <a href="#projects">
-        <span class="relative">
-          Projects
-        </span>
-    </a>
-    <a href="#skills">
-        <span class="relative">
-          Skills
-        </span>
-    </a>
-    <a href="#contact">
-        <span class="relative">
-          Contacts
+<!--TODO: Hide sidebar if on mobile phone upright view-->
+<nav class="fixed top-0 left-0 z-40 w-70 h-full content-center space-y-8 w-1/4 text-xl backdrop-blur-3xl">
+    <ul class="space-y-10">
+        <li class="flex justify-center">
+        <a href="#introduction">
+            <span class="relative hover:text-pink-400 cursor-pointer transition-all ease-in-out before:transition-[width] before:ease-in-out before:duration-700 before:absolute before:bg-pink-400 before:origin-center before:h-[1px] before:w-0 hover:before:w-[50%] before:bottom-0 before:left-[50%] after:transition-[width] after:ease-in-out after:duration-700 after:absolute after:bg-pink-400 after:origin-center after:h-[1px] after:w-0 hover:after:w-[50%] after:bottom-0 after:right-[50%]">
+              Introduction
+            </span>
+        </a>
+        </li>
+        <li class="flex justify-center">
+        <a href="#working-experience">
+            <span class="relative hover:text-pink-400 cursor-pointer transition-all ease-in-out before:transition-[width] before:ease-in-out before:duration-700 before:absolute before:bg-pink-400 before:origin-center before:h-[1px] before:w-0 hover:before:w-[50%] before:bottom-0 before:left-[50%] after:transition-[width] after:ease-in-out after:duration-700 after:absolute after:bg-pink-400 after:origin-center after:h-[1px] after:w-0 hover:after:w-[50%] after:bottom-0 after:right-[50%]">
+              Working Experience
+            </span>
+        </a>
+        </li>
+        <li class="flex justify-center">
+        <a href="#projects">
+            <span class="relative hover:text-pink-400 cursor-pointer transition-all ease-in-out before:transition-[width] before:ease-in-out before:duration-700 before:absolute before:bg-pink-400 before:origin-center before:h-[1px] before:w-0 hover:before:w-[50%] before:bottom-0 before:left-[50%] after:transition-[width] after:ease-in-out after:duration-700 after:absolute after:bg-pink-400 after:origin-center after:h-[1px] after:w-0 hover:after:w-[50%] after:bottom-0 after:right-[50%]">
+              Projects
+            </span>
+        </a>
+        </li>
+        <li class="flex justify-center">
+        <a href="#skills">
+            <span class="relative hover:text-pink-400 cursor-pointer transition-all ease-in-out before:transition-[width] before:ease-in-out before:duration-700 before:absolute before:bg-pink-400 before:origin-center before:h-[1px] before:w-0 hover:before:w-[50%] before:bottom-0 before:left-[50%] after:transition-[width] after:ease-in-out after:duration-700 after:absolute after:bg-pink-400 after:origin-center after:h-[1px] after:w-0 hover:after:w-[50%] after:bottom-0 after:right-[50%]">
+              Skills
+            </span>
+        </a>
+        </li>
+        <li class="flex justify-center">
+        <a href="#contact">
+            <span class="relative hover:text-pink-400 cursor-pointer transition-all ease-in-out before:transition-[width] before:ease-in-out before:duration-700 before:absolute before:bg-pink-400 before:origin-center before:h-[1px] before:w-0 hover:before:w-[50%] before:bottom-0 before:left-[50%] after:transition-[width] after:ease-in-out after:duration-700 after:absolute after:bg-pink-400 after:origin-center after:h-[1px] after:w-0 hover:after:w-[50%] after:bottom-0 after:right-[50%]">
+              Contacts
         </span>
         </a>
+        </li>
+    </ul>
 </nav>
