--- a/src/components/skills/AllSkills.astro
+++ b/src/components/skills/AllSkills.astro
@@ -1,6 +1,6 @@
 ---
 // SkillsSection.astro
-import SkillCard from './SkillCard.astro';
+import SkillCard from "./SkillCard.astro";
 
 const skillsData = [
     { heading: 'Frontend Development', skills: ['Javascript','TailwindCSS','Astro','React', 'HTML', 'CSS', 'PHP'], rates: [3.5, 3.5, 2, 3, 3, 3.5, 2] },
