--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const pageTitle = "Home Page";
 
 <Layout>
 	<SideNav />
-	<div class="p-4 sm:ml-64">
+	<div class="ml-70">
 		<Welcome />
 		<Timeline />
 		<Projects/>
