--- a/src/pages/skills.astro
+++ b/src/pages/skills.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import AllSkills from "../components/AllSkills.astro";
+import AllSkills from "../components/skills/AllSkills.astro";
 ---
 <Layout>
     <AllSkills/>
