Temporary adding id to link nav to sections

--- a/src/components/Contacts.astro
+++ b/src/components/Contacts.astro
@@ -2,7 +2,7 @@
 ---
 <div class="container md:h-2/3 grid grid-cols-1 gap-10 px-6 py-12 mx-auto lg:grid-cols-3 md:items-center md:gap-0">
     <div class="flex flex-col items-start md:items-center lg:items-start">
-        <h1 class="mt-1 text-3xl font-extrabold">Contact Me!</h1>
+        <h1 id="contacts" class="mt-1 text-3xl font-extrabold">Contact Me!</h1>
 
         <p class="mt-3 font-light">I will be absolutely grateful if you do 🥲</p>
     </div>
