--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -9,7 +9,7 @@ import React from 'react';
 				<img src={avatarPhoto.src} width="100" height="100" class="rounded-full sm:w-70 sm:h-70 md:w-50 md:h-50" alt="avatar"/>
 			</div>
 			<div class="pt-5">
-				<h1 class="font-extrabold text-2xl md:text-3xl">Hi, I'm Du Van Nguyen!</h1>
+				<h1 id="introduction" class="font-extrabold text-2xl md:text-3xl">Hi, I'm Du Van Nguyen!</h1>
 			</div>
 			<span class="sm:text-sm md:text-xl pt-3 px-5 md:mr-30 md:ml-30 lg:mr-60 lg:ml-60">
 					I am a recent <mark class="highlightword text-[1rem] px-1 py-1/5 rounded">Computer Science</mark> (<mark class="highlightword text-[1rem] px-1 py-1/5 rounded">Software
