--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Timeline from "../components/Timeline.astro";
 import ProjectCarousel from "../components/project/ProjectCarousel.astro";
 import SideNav from "../components/SideNav.astro";
 import Projects from "./projects.astro";
+import Contacts from "../components/Contacts.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -17,6 +18,7 @@ const pageTitle = "Home Page";
 		<Welcome />
 		<Timeline />
 		<Projects/>
+		<Contacts />
 	</div>
 	<!--<ProjectCarousel />-->
 </Layout>
