Disable sidebar for mobile view

--- a/src/components/SideNav.astro
+++ b/src/components/SideNav.astro
@@ -2,7 +2,7 @@
 
 ---
 <!--TODO: Hide sidebar if on mobile phone upright view-->
-<nav class="fixed top-0 left-0 z-40 w-70 h-full content-center space-y-8 w-1/4 text-xl backdrop-blur-3xl">
+<nav class="invisible md:visible fixed top-0 left-0 z-40 w-70 h-full content-center space-y-8 w-1/4  border-r backdrop-blur-3xl border-[#5E5E64] text-2xl">
     <ul class="space-y-10">
         <li class="flex justify-center">
         <a href="#introduction">
@@ -33,7 +33,7 @@
         </a>
         </li>
         <li class="flex justify-center">
-        <a href="#contact">
+        <a href="#contacts">
             <span class="relative hover:text-pink-400 cursor-pointer transition-all ease-in-out before:transition-[width] before:ease-in-out before:duration-700 before:absolute before:bg-pink-400 before:origin-center before:h-[1px] before:w-0 hover:before:w-[50%] before:bottom-0 before:left-[50%] after:transition-[width] after:ease-in-out after:duration-700 after:absolute after:bg-pink-400 after:origin-center after:h-[1px] after:w-0 hover:after:w-[50%] after:bottom-0 after:right-[50%]">
               Contacts
         </span>
