--- a/src/components/project/ProjectCarousel.astro
+++ b/src/components/project/ProjectCarousel.astro
@@ -2,7 +2,7 @@
 import ProjectCard from "./ProjectCard.astro"
 const blogs = await Astro.glob('../../pages/projectblogs/*.md')
 ---
-<h1 id="#projects" class="font-extrabold text-2xl md:text-3xl p-5">Projects</h1>
+<h1 id="projects" class="font-extrabold text-2xl md:text-3xl p-5">Projects</h1>
 <div class="relative h-full w-full md:overflow-y-auto">
 <!-- ProjectCarousel wrapper -->
     <div class="text-black">
