--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -2,7 +2,8 @@
 import avatarPhoto from '../../public/avatar.JPG';
 import React from 'react';
 ---
-<div id="introduction" class="pt-5">
+<!--TODO: Add scrolling animation-->
+<div id="introduction" class="pt-5 h-screen">
 	<main class="h-full flex justify-center">
 		<section id="hero" class="flex items-center flex-col justify-center">
 			<div class="">
