--- a/src/components/project/ProjectCard.astro
+++ b/src/components/project/ProjectCard.astro
@@ -2,7 +2,7 @@
  import StateTag from "./StateTag.astro";
  const {emoji, name, link, github, skills, state, description} = Astro.props;
  ---
- <div class="border border-[#5E5E64] max-w-full backdrop-blur-sm md:w-2/3 rounded-xl p-6 snap-start transition-all duration-300 ease-in-out  hover:scale-103">
+ <div class="border border-[#5E5E64] w-full backdrop-blur-sm md:w-2/3 rounded-xl p-6 snap-start transition-all duration-300 ease-in-out  hover:scale-103">
      <a href={link}>
          <h1 class="text-[#FFFFFFcc] font-extrabold text-2xl md:text-3xl transition-colors duration-300 ease-in-out hover:text-pink-500">
              <span class="text-2xl">{emoji}</span> {name}
