--- a/src/components/project/ProjectCarousel.astro
+++ b/src/components/project/ProjectCarousel.astro
@@ -7,7 +7,7 @@ const blogs = await Astro.glob('../../pages/projectblogs/*.md')
 <!-- ProjectCarousel wrapper -->
     <div class="text-black">
         <!--TODO: Fix this according to new design &#45;&#45; All important details in one page index-->
-        <div class="flex flex-col gap-4 px-4 py-6 h-full w-full items-center">
+        <div class="flex flex-col gap-4 px-4 py-6 items-center">
             <!--Dynamic Projecst Cards from MD Files:-->
             {blogs.map((blog) => (
                 <ProjectCard emoji={blog.frontmatter.emoji}
