--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,7 @@ import SideNav from "../components/SideNav.astro";
 		<title>zuvn</title>
 	</head>
 	<body>
+	<!--PINK WAVE ANIMATION BACKGROUND-->
 		<svg class="fixed inset-0 w-full h-full -z-1" version="1.1" xmlns="http://www.w3.org/2000/svg"
 			 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 1600 900" preserveAspectRatio="xMidYMax slice">
 			<defs>
@@ -63,7 +64,9 @@ import SideNav from "../components/SideNav.astro";
 				</use>
 			</g>
 		</svg>
-		<slot />
+	<!--TODO: Try animating the background-->
+	<!--	<div class="fixed top-0 left-0 w-full h-full -z-1 bg-cover bg-center" style="background-image: url('/background.png');"></div>-->
+	<!--	<slot />-->
 </body>
 </html>
 <style>
