--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,7 +66,7 @@ import SideNav from "../components/SideNav.astro";
 		</svg>
 	<!--TODO: Try animating the background-->
 	<!--	<div class="fixed top-0 left-0 w-full h-full -z-1 bg-cover bg-center" style="background-image: url('/background.png');"></div>-->
-	<!--	<slot />-->
+		<slot />
 </body>
 </html>
 <style>
