--- a/src/components/HomeButton.astro
+++ b/src/components/HomeButton.astro
@@ -1,8 +1,8 @@
 ---
 ---
-<div class="md:hidden w-screen md:w-full flex place-content-center pb-10">
+<div class="w-screen md:w-full flex place-content-center pb-10">
     <a href="/">
-        <button type="button" class="relative inline-flex items-center px-2 py-2 text-sm 5xl:text-xl font-medium text-gray-700 bg-white rounded-md sm:rounded-none hover:bg-gray-50">
+        <button type="button" class="relative inline-flex items-center px-2 py-2 text-sm 5xl:text-xl font-medium text-gray-700 bg-white rounded-md hover:bg-gray-100">
             <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 20 20" class="w-5 h-5" aria-hidden="true" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd"></path>
             </svg>Back to Home</button>
